# advent-of-code

./: .gitignore  Cargo.toml  build.rs
previous-years/2017/src/: day1.rs  day2.rs  day3.rs  main.rs  utils.rs
previous-years/2018/src/: day1.rs  day2.rs  lib.rs  main.rs
previous-years/2021/: day2.rs  day5.rs  day6.rs
python/: entrypoint.py  pyproject.toml
python/aoc/: cli.py  year.py
python/aoc/year2022/: __init__.py  day1.py  day2.py  day3.py  day4.py
python/aoc/year2023/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day19.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  utils.py
python/aoc/year2024/: __init__.py  day1.py  day2.py  day3.py
python/aoc/year2025/: __init__.py  day1.py
src/: aoc.rs  day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  input.rs  lib.rs  main.rs  util.rs
