[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code solutions"
authors = ["Erich Healy <erichrhealy@gmail.com>"]
license = "MIT"
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"

[tool.poetry.scripts]
aoc = "aoc.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
